# github-actions-cicd-example

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: .codecov.yml
.github/workflows/: 1_tests.yml  2_coverage.yml  3_linting.yml  4_docs_build.yml  5_docs_deploy.yml  6_pypi_release.yml  coverage.yml  tests.yml
actionsci/: __init__.py  somecode.py
actionsci/data/: mogi_data.tsv
actionscicd/: __init__.py  somecode.py
docs/source/: api.rst  conf.py  index.rst  somecode.rst
tests/: test_somecode.py
