[metadata]
name = actions-ci-test
version = 0.0.1
author = Alex Malins
author_email = github@alexmalinsREMOVETHIS.com
license = MIT
license_file = LICENSE
description = Testing GitHub Actions, CI and coverage...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmalins/actions-ci-test
edit_on_github = False
github_project = alexmalins/actions-ci-test

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires = numpy

[options.package_data]
actions-ci-test = actions-ci-test/data/test.dat

[coverage:run]
omit = tests/*
