[metadata]
name = github-actions-cicd-example
version = attr: actionscicd.__version__
author = Alex Malins
author_email = github@alexmalinsREMOVETHIS.com
license = MIT
license_file = LICENSE
license_file_content_type = text/markdown; charset=UTF-8
description = Test CI and automated code coverage reports using GitHub Actions.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/alexmalins/github-actions-cicd-example
edit_on_github = False
github_project = alexmalins/github-actions-cicd-example
project_urls =
    Source = https://github.com/alexmalins/github-actions-cicd-example
    Tracker = https://github.com/alexmalins/github-actions-cicd-example/issues
    Documentation = https://alexmalins.github.io/github-actions-cicd-example
classifiers = 
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3 :: Only"
    "Programming Language :: Python :: 3.7"
    "Programming Language :: Python :: 3.8"
    "Programming Language :: Python :: 3.9"
    "Programming Language :: Python :: 3.10"
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"
    "Development Status :: 1 - Planning"

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.package_data]
* = data/mogi_data.tsv

[coverage:report]
omit = tests/*
